--- a/styles.css
+++ b/styles.css
@@ -78,6 +78,13 @@ a {
 
 .card-container {
     padding: 100px;  
+    margin-left: 168px; 
+}
+
+.card {
+    margin-left: 18px; 
+    margin-right: 18px; 
+    margin-bottom: 18px;
 }
 
 .skills {
@@ -103,4 +110,28 @@ a {
     justify-content: space-evenly; 
     align-items: center;
 
+}
+
+@media only screen and (max-width: 768px){
+    .card-container {
+        padding: 10px; 
+        margin-left: 5px;
+    }
+
+    .skills {
+        margin-top: 480px; 
+    }
+
+    .icons {
+        flex-direction: column;
+        align-items: stretch;  
+    }
+
+    .fab {
+        margin-top: 28px; 
+    }
+
+    nav li {
+        padding: 0; 
+    }
 }
